exercício pseudo-classes

--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <h1>Pseudo-classes</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab illo porro rem harum corrupti? Numquam rem delectus, possimus ipsum, minus quibusdam incidunt odio iste debitis tempora illum magnam in!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum iure officia tenetur temporibus quidem. Expedita exercitationem repellendus sequi veniam ad aliquid harum, et unde quisquam veritatis, laborum nisi at nostrum.</p>
+    <div class="d">01</div>
+    <div class="d">02</div>
+    <div class="d">03</div>
+    <h2>Hover</h2>
+    <p>Passe o mouse por cima</p>
+    <div id="d4">
+        Texto
+        <p>Texto oculto</p>
+    </div>
 </body>
 </html>
