adicionei links personalizados

--- a/html/index.html
+++ b/html/index.html
@@ -19,5 +19,11 @@
         Texto
         <p>Texto oculto</p>
     </div>
+    <h2>Personalizando links</h2>
+    <ul>
+        <li><a href="https://github.com/caleoo">github caléo</a></li>
+        <li><a href="https://monkeytype.com">monkeytype</a></li>
+        <li><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-2-de-5-40-horas/aulas/modulo-2-2/modulos/capitulo-15-aula-04-pseudo-elementos-em-css/">pseudo-elementos</a></li>
+    </ul>
 </body>
 </html>
