adicionei imagem reativa

--- a/html/index.html
+++ b/html/index.html
@@ -25,5 +25,6 @@
         <li><a href="https://monkeytype.com">monkeytype</a></li>
         <li><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-2-de-5-40-horas/aulas/modulo-2-2/modulos/capitulo-15-aula-04-pseudo-elementos-em-css/">pseudo-elementos</a></li>
     </ul>
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="html" height="35"/>
 </body>
 </html>
